--- a/lmsm-vanilla.html
+++ b/lmsm-vanilla.html
@@ -58,6 +58,8 @@
               <input type="button" onclick="window.lmsm.run()" value="Play" />
               <input type="button" onclick="window.lmsm.pause()" value="Pause" />
               <input type="button" onclick="window.lmsm.resume()" value="Continue" />
+              <input type="button" onclick="window.lmsm.reset();
+                                            window.lmsm.syncToDOM();" value="Reset" />
               <input type="button" onclick="
                     window.lmsm.step();
                     window.lmsm.syncToDOM();
@@ -116,7 +118,7 @@
           </div>
         </div>
       </div>
-      <div id="memoryBox" class="box" data-cols="1 2" data-rows="3">
+      <div id="memoryBox" class="box" data-cols="1 3" data-rows="3">
         <strong class="allcaps block titlebar">Memory</strong>
         <div class="center">
           <table onchange="window.lmsm.updateMemory()">
@@ -1200,22 +1202,17 @@
           </table>
         </div>
       </div>
-      <div id="consoleBox" class="box" data-cols="3" data-rows="3">
+    </div>
+    <div id="outputBox" class="box" data-cols="5" data-rows="2 3">
+      <div id="nextInstructionBox" class="box" style="height: 150px">
+        <strong class="allcaps block titlebar">Next Instruction</strong>
+        <output id="nextInstructionOutput"></output>
+      </div>
+      <div id="consoleBox" class="box">
         <strong class="allcaps block titlebar">Console</strong>
         <input type="button" onclick="window.lmsm.clearOutput()" value="Clear" />
         <div id="outputPane" class="box pane"></div>
       </div>
-    </div>
-    <div id="outputBox" class="box" data-cols="5" data-rows="2 3">
-      <div id="currentInstructionBox" class="box">
-        <strong class="allcaps block titlebar">Current Instruction</strong>
-        <output id="currentInstructionOutput"></output>
-      </div>
-      <div id="debuggerBox" class="box">
-        <strong class="allcaps block titlebar">Debugger</strong>
-        <div class="box pane">TODO</div>
-      </div>
-
     </div>
   </div>
 </body>
