--- a/functions.html
+++ b/functions.html
@@ -22,7 +22,7 @@
     <h1>Functions On The LMSM</h1>
 
     <p>
-        The LSMS is designed to make <a href="https://en.wikipedia.org/wiki/Function_(computer_programming)">function</a>,
+        The LSMS is designed to make <a href="https://en.wikipedia.org/wiki/Function_(computer_programming)">functions</a>,
         including <a href="https://en.wikipedia.org/wiki/Recursion_(computer_science)">recursive function calls</a>,
         possible, despite the limited resources available to the system.
     </p>
