--- a/assembly.html
+++ b/assembly.html
@@ -14,6 +14,7 @@
             <a href="assembly.html">Assembly & Execution</a>
             <a href="functions.html">Functions</a>
             <a href="firth.html">Firth</a>
+            <a href="sea.html">Sea</a>
             <a href="emulator.html">Emulator</a>
             <a href="https://github.com/bigskysoftware/littlemanstackmachine.org">Github</a>
         </p>
@@ -464,6 +465,15 @@
             </td>
         </tr>
         <tr>
+            <td>
+                936
+            </td>
+            <td>
+                SREM
+            </td>
+            <td>
+                The Stack Remainder Instruction.  This instruction will remove the top two values on the top of the value stack and replace them with the remainder of the division of those values
+            </td>
             <td>
                 910
             </td>
