--- a/functions.html
+++ b/functions.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://the.missing.style/">
+    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1">
+    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1/prism">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>The Little Man Stack Machine</title>
 </head>
@@ -52,7 +53,7 @@
         Here is a simple example of an LSMM assembly program that asks a user for input, calls a function to square
         that number, and then prints the result.  Here is the assembly and the assembled machine instructions:
     </p>
-    
+
     <img src="img/function1.png">
 
     <p>
