--- a/firth.html
+++ b/firth.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://the.missing.style/">
+    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1">
+    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1/prism">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>The Little Man Stack Machine</title>
 </head>
